# ojt-agent

./: .gitignore  AI-AGENT-OJT.md  Gemini.md  README.md  pyproject.toml
.gemini/commands/: analysis.toml  dataset.toml  glossary.toml  rule.toml  system.toml
src/: cli.py  knowledge_manager.py  mcp_server.py  rag_engine.py  schemas.py
src/ai_ojt/: __init__.py
