[project]
name = "ai-ojt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "kokepon", email = "zdsrnwemo@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
ai-ojt = "ai_ojt:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
