[project]
name = "ai-ojt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "kokepon", email = "zdsrnwemo@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "llama-index>=0.14.8",
    "llama-index-embeddings-gemini>=0.4.1",
    "llama-index-llms-gemini>=0.6.1",
    "llama-index-vector-stores-qdrant>=0.9.0",
    "mcp>=1.22.0",
    "pydantic>=2.12.4",
    "qdrant-client>=1.16.1",
    "typer>=0.20.0",
]

[project.scripts]
ai-ojt = "ai_ojt:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
